<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D5464C"
    android:padding="16dp"
    tools:context=".view.AboutActivity">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.core.widget.NestedScrollView>
    <ImageView
        android:id="@+id/frame2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/frame2"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <ImageView
        android:id="@+id/photoMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/me"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/myName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myName"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/frame2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="25sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="#fff"
        />
    <TextView
        android:id="@+id/letterMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/letterme"
        app:layout_constraintTop_toBottomOf="@id/myName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="15sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="#fff"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/dicoding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dicoding"
        android:fontFamily="sans-serif"
        android:layout_marginTop="25dp"
        android:textSize="25sp"
        android:textColor="#fff"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/letterMe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/namalengkap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dicoding"
        android:layout_marginTop="30dp"
        android:textColor="#fff"
        android:text="@string/namaibnu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        app:layout_constraintTop_toBottomOf="@id/namalengkap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/email"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="No hp : 0895358594480"/>


</androidx.constraintlayout.widget.ConstraintLayout>